# osrs-cli

./: .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.claude/skills/osrs-helper/: SKILL.md
src/osrs_cli/: __init__.py  api.py  wiki.py
tests/: conftest.py  test_api.py  test_cli.py
