[project]
name = "osrs-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Brian Fitzgerald", email = "brianfitzgerald242@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fire>=0.7.1",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.scripts]
osrs-cli = "osrs_cli:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
