[project]
name = "osrs-cli"
version = "0.1.0"
description = "CLI for reading OSRS info"
readme = "README.md"
authors = [
    { name = "Brian Fitzgerald", email = "brianfitzgerald242@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "fire>=0.7.1",
    "requests>=2.33.1",
    "rich>=15.0.0",
]

[project.scripts]
osrs-cli = "osrs_cli:main"

[tool.ruff]
line-length = 110
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.src]
include = ["src", "tests"]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.3",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.11",
    "ty>=0.0.31",
]
